# strim-overlay

./: .gitignore  Cargo.toml  README.md  flake.nix  leptosfmt.toml  rust-toolchain.toml
.helix/: languages.toml
.sass-cache/3bcb874f71f8ad15b4281f7aac1eb0dc037ba423/: main.scssc
public/: sugoi.webm
src/: app.rs  control_page.rs  home_page.rs  lib.rs  main.rs  server.rs
style/: main.css  main.scss
