[package]
name = "strim-overlay"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { version = "0.8.0", optional = true, features = ["macros"] }
console_error_panic_hook = { version = "0.1", optional = true }
leptos = { version = "0.8.0", features = ["nightly"] }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
leptos_router = { version = "0.8.0", features = ["nightly"] }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.6", features = ["fs", "compression-gzip"], optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
thiserror = "1"
tracing = { version = "0.1" }
http = "1"
serde = { version = "1.0.197", features = ["derive"] }
leptos-use = { version = "0.16.3" }
cfg-if = "1.0.0"
bincode = "1.3.3"
scraper = { version = "0.19.0", optional = true }
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "json"], optional = true }
serde_json = { version = "1.0.115", optional = true }
url = { version = "2.5.0", optional = true }
base64 = { version = "0.22.0" }
anyhow = "1.0.81"
wasm-bindgen-futures = "0.4.42"
indexmap = { version = "2.2.6", features = ["serde"] }
codee = { version = "0.3.3", features = ["bincode_serde", "json_serde"] }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen"
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:scraper",
    "dep:serde_json",
    "dep:url",
    "dep:reqwest",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/axum",
    "leptos-use/ssr",
    "axum/ws",
    "tokio/process",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "strim-overlay"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.css"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "0.0.0.0:3030"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
